# reimagined-umbrella

./: .dockerignore  .env.arc.example  .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  LICENSE  MICHELE_DOWNLOAD_INSTRUCTIONS.md  Procfile  README.md  cloudbuild.yaml  console logs.rtf  demo.py  foundry.toml  monorepo.md  pyproject.toml
artifacts/blend-152244b25d6c/: frame-0001.json  frame-0003.json  frame-0005.json  frame-0008.json  frame-0012.json  frame-0014.json  (+99 more)
cache/: solidity-files-cache.json
config/: blending.toml
contracts/: NPCMotionRegistry.sol  NPCMotionRegistryV2.sol
docs/: API_KEY_SECURITY.md  ARC_INTEGRATION.md  BLENDANIM_ALIGNMENT.md  BLENDANIM_INTEGRATION.md  BLENDANIM_PLAYBACK.md  BLENDANIM_USAGE.md  BLEND_METRICS.md  CHANGELOG_v2.1.md  DATA_SCHEMAS.md  DEMO_FLOW.md  GEMINI_EMBEDDINGS.md  GEMINI_INTELLIGENT_BLENDING.md  HYBRID_SIMILARITY.md  IMPLEMENTATION_GEMINI_BLENDING.md  PAPER_ENHANCEMENTS.md  QUICKSTART_GEMINI.md  QUICK_REFERENCE.txt  REPO_STANDARDS.md  UI_IMPLEMENTATION.md  UPLOAD_TO_GEMINI.md  VEO_VIDEO_GENERATION.md  WORKFLOW_VISUALIZER_IMPLEMENTATION.md
scripts/: authorize-arc.sh  copy_motion_files.py  copy_motion_files.sh  deploy-arc.sh  download_mixamo.py  quick_upload.py  setup_michele_library.sh  upload_and_generate_manifest.py  upload_michelle_to_gemini.py  upload_motions_to_gemini.py
tests/: test_blendanim_integration.py  test_circle_integration.py  test_elasticsearch_integration.py  test_file_search_integration.py  test_gemini_integration.py  test_hybrid_similarity.py  test_models.py  test_real_motion_blend.py  test_spade_blend.py  test_transaction_routing.py  test_trustless_agent.py  test_workflow_visualization.py
(+5304 files in other folders)
