[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinetic-ledger"
version = "0.1.0"
description = "Trust-minimized motion commerce stack (Phase-2 demo)"
authors = [{ name = "Kinetic Ledger Team" }]
requires-python = ">=3.10"

[project.dependencies]
fastapi = "^0.115.0"
pydantic = "^2.7.0"
uvicorn = "^0.30.0"
eth-utils = "^2.3.0"

[project.optional-dependencies]
warehouse = ["google-cloud-storage>=2.14.0"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
